Revert "Set footer as fixed in attempt to fix issue on mobile devices with overflow due to height calcs"
This reverts commit 53e6cfa637da9a4c03303e887104525b82064812.

--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -169,8 +169,6 @@
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
   padding: 4px;
   color: $grey-color--dark;
   font-size: 0.7em;
